# oelint-parser

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  build.sh  gendoc.sh  pydoc-markdown.yml  pyproject.toml  release.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.sh
.github/workflows/: autorelease.yml  codeql.yml  pythonpackage.yml
docs/: api-documentation.md
oelint_parser/: __init__.py  cls_item.py  cls_stash.py  const_func.py  const_vars.py  constants.py  helper_files.py  inlinerep.py  parser.py  rpl_regex.py
oelint_parser/data/: const-default.json
tests/: test-conf.bb  test-image.bb  test-inline.bb  test-pkggroup.bb  test-recipe-new-native_1.0.bb  test-recipe-new_1.0.bb  test-recipe-new_2.0.bb  test-recipe-wrong-syntax_1.0.bb  test-recipe_1.0.bb  test-unset.bb  test-versioned.bb  test_bbappends.py  test_bbclass.py  test_conf.py  test_constants.py  test_expand.py  test_image.py  test_include.py  test_inline.py  test_inlineexpansion.py  test_linenumbers.py  test_linking.py  test_packages_dynamic.py  test_parser.py  test_parser_new.py  test_parser_syntax_issues.py  test_pattern.py  test_pkggroup.py  test_snippet.py  test_unset.py  test_versioned.py  utils.py
tests/pattern/: pattern_comment_py.bb  pattern_comment_py.bb.expect  pattern_function.bb  pattern_function.bb.expect  pattern_python.bb  pattern_python.bb.expect  pattern_var.bb  pattern_var.bb.expect
tests/testlayer/classes/: class-1.bbclass  class-2.bbclass  foo.bbclass
tests/testlayer/classes-global/: global-foo.bbclass
tests/testlayer/conf/machine/: abc.conf
tests/testlayer/conf/machine/include/: sub.inc  test.inc
tests/testlayer/recipes-appends/: test.bb  test.bbappend
tests/testlayer/recipes-bar/: test-alt_2.bb  test.inc  test2.inc  test3.inc  test_1.bb  test_2.bb
tests/testlayer/recipes-foo/: recipe-bar_1.0.bb  recipe-baz_1.0.bb  recipe-foo_1.0.bb  recipe-foo_2.0.bb  recipe-foo_3.0.bb  recipe-foo_3.1.bb
